--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
-<%= link_to "About Me", pages_about_path %>
+<div>
+    <h1>Alexej Papula</h1>
+    <p>Whoop Whoop let's go</p>
+    <%= link_to "About Me", pages_about_path %>
+<div>
